--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
       height: 50%;
       border: 5px solid black;
       border-radius: 50%;
-      background-color: red;
+      background: linear-gradient(to bottom, #ff1c1c, #d10000);
       transition: transform 0.5s;
+      box-shadow: inset -5px -5px 10px rgba(0, 0, 0, 0.3);
     }
     .pokeball-bottom {
       top: 50%;
-      background-color: white;
+      background: linear-gradient(to bottom, #ffffff, #cccccc);
     }
     .pokeball-center {
       position: absolute;
@@ -51,6 +52,7 @@
       border: 5px solid black;
       border-radius: 50%;
       z-index: 1;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
     .pokeball-center-inner {
       position: absolute;
@@ -63,6 +65,7 @@
       border-radius: 50%;
       transform: translate(-50%, -50%);
       z-index: 2;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
     }
     .fortune-slip {
       position: absolute;
@@ -76,6 +79,7 @@
       border-radius: 5px;
       transition: transform 1s 1s, opacity 1s 1s;
       font-weight: bold;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
     .cracked .pokeball-top {
       transform: translateY(-100px) rotate(-30deg);
@@ -191,13 +195,34 @@
           pokeball.classList.remove('shaking');
           pokeball.classList.add('cracked');
 
-          fire(0.25, { spread: 50, startVelocity: 55 });
-          fire(0.2, { spread: 100 });
-          fire(0.35, { spread: 150, decay: 0.91, scalar: 0.8 });
-          fire(0.1, { spread: 150, startVelocity: 25, decay: 0.92, scalar: 1.2 });
-          fire(0.1, { spread: 140, startVelocity: 45 });
-        }, 1000);
+          fire(0.25, {
+            spread: 50,
+            startVelocity: 55,
+          });
 
+          fire(0.2, {
+            spread: 100,
+          });
+
+          fire(0.35, {
+            spread: 150,
+            decay: 0.91,
+            scalar: 0.8,
+          });
+
+          fire(0.1, {
+            spread: 150,
+            startVelocity: 25,
+            decay: 0.92,
+            scalar: 1.2,
+          });
+
+          fire(0.1, {
+            spread: 140,
+            startVelocity: 45,
+          });
+
+        }, 1000);
         const uiOverlay = document.getElementById('UI-overlay');
         uiOverlay.style.display = 'none';
       }
