--- a/index.html
+++ b/index.html
@@ -19,57 +19,42 @@
       background-color: #f0e68c;
       font-family: 'Roboto', sans-serif;
     }
-    .pokeball {
+
+    .fortune-cookie {
       position: absolute;
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       cursor: pointer;
       transition: transform 0.5s;
+      perspective: 1000px;
     }
-    .pokeball-top, .pokeball-bottom {
+
+    .cookie-left, .cookie-right {
       position: absolute;
-      width: 100%;
-      height: 50%;
-      border: 5px solid black;
+      width: 75px;
+      height: 75px;
       border-radius: 50%;
-      background: linear-gradient(to bottom, #ff1c1c, #d10000);
+      background-color: #d2691e;
       transition: transform 0.5s;
-      box-shadow: inset -5px -5px 10px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3), inset -5px -5px 10px rgba(0, 0, 0, 0.3);
     }
-    .pokeball-bottom {
-      top: 50%;
-      background: linear-gradient(to bottom, #ffffff, #cccccc);
+
+    .cookie-left {
+      transform: rotateY(-45deg) rotateX(25deg);
+      transform-origin: 100% 50%;
     }
-    .pokeball-center {
-      position: absolute;
-      top: 45%;
-      width: 60px;
-      height: 60px;
-      background-color: white;
-      border: 5px solid black;
-      border-radius: 50%;
-      z-index: 1;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+    .cookie-right {
+      transform: rotateY(45deg) rotateX(25deg);
+      transform-origin: 0% 50%;
     }
-    .pokeball-center-inner {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 30px;
-      height: 30px;
-      background-color: white;
-      border: 5px solid black;
-      border-radius: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 2;
-      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-    }
+
     .fortune-slip {
       position: absolute;
-      top: 58%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%) scale(0) rotate(0deg);
       opacity: 0;
@@ -81,16 +66,20 @@
       font-weight: bold;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
-    .cracked .pokeball-top {
-      transform: translateY(-100px) rotate(-30deg);
+
+    .cracked .cookie-left {
+      transform: rotateY(-90deg) rotateX(25deg) translateX(-50px);
     }
-    .cracked .pokeball-bottom {
-      transform: translateY(100px) rotate(30deg);
+
+    .cracked .cookie-right {
+      transform: rotateY(90deg) rotateX(25deg) translateX(50px);
     }
+
     .cracked + .fortune-slip {
       transform: translate(-50%, -50%) scale(1.2) rotate(360deg);
       opacity: 1;
     }
+
     @keyframes shake {
       0% { transform: rotate(0deg); }
       25% { transform: rotate(-10deg); }
@@ -98,6 +87,7 @@
       75% { transform: rotate(-10deg); }
       100% { transform: rotate(0deg); }
     }
+
     .shaking {
       animation: shake 0.5s ease-in-out infinite;
     }
@@ -115,17 +105,14 @@
       </div>
     </div>
   </div>
-  <div class="pokeball" id="pokeball" style="display: none;">
-    <div class="pokeball-top" id="pokeballTop"></div>
-    <div class="pokeball-bottom" id="pokeballBottom"></div>
-    <div class="pokeball-center">
-      <div class="pokeball-center-inner"></div>
-    </div>
+  <div class="fortune-cookie" id="fortuneCookie" style="display: none;">
+    <div class="cookie-left" id="cookieLeft"></div>
+    <div class="cookie-right" id="cookieRight"></div>
   </div>
   <div class="fortune-slip" id="fortuneSlip"></div>
   <a-scene mindar-image="imageTargetSrc: ./static/mind-file/Shinchan.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
     <a-entity id="example-target" mindar-image-target="targetIndex: 0">
-      <a-gltf-model id="model" rotation="0 0 0 " position="0 -3 -9" scale="2 2 2" animation-mixer></a-gltf-model>
+      <a-gltf-model id="model" rotation="0 0 0" position="0 -3 -9" scale="2 2 2" animation-mixer></a-gltf-model>
     </a-entity>
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: ${customFields.libVersion}; objects: .clickable"></a-camera>
   </a-scene>
@@ -155,14 +142,14 @@
         "A windfall of good fortune is heading your way."
       ];
       
-      const pokeball = document.getElementById('pokeball');
-      pokeball.style.display = "none";
-      pokeball.classList.add('shaking');
+      const fortuneCookie = document.getElementById('fortuneCookie');
+      fortuneCookie.style.display = "none";
+      fortuneCookie.classList.add('shaking');
 
       exampleTarget.addEventListener("targetFound", event => {
         console.log("Target detected:");
         console.log("Loading random model...");
-        pokeball.style.display = "block";
+        fortuneCookie.style.display = "block";
       });
 
       const count = 200;
@@ -192,8 +179,8 @@
         fortuneSlip.textContent = randomFortune;
 
         setTimeout(() => {
-          pokeball.classList.remove('shaking');
-          pokeball.classList.add('cracked');
+          fortuneCookie.classList.remove('shaking');
+          fortuneCookie.classList.add('cracked');
 
           fire(0.25, {
             spread: 50,
