--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 
       <a-assets>
         <a-asset-item id="minecraft_chest" src="./static/3D-file/glb/minecraft_chest_without_animation.glb"></a-asset-item>
+        <a-asset-item id="minecraft_chest_animate" src="./static/3D-file/glb/minecraft_chest.glb"></a-asset-item>
       </a-assets>
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">  
-        <a-gltf-model id="minecraft_chest" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" animation-mixer></a-gltf-model>
+        <a-gltf-model id="minecraft_chest_model" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" animation-mixer></a-gltf-model>
       </a-entity>
 
       <div class="fortune-slip" id="fortuneSlip"></div>
@@ -70,7 +71,7 @@
         ];
         
         // Hide the fortune cookie initially
-        const minecraftChest = document.getElementById("minecraft_chest");
+        const minecraftChest = document.getElementById("minecraft_chest_model");
         // minecraft_chest.style.display = "none";
         minecraftChest.classList.add("shaking"); // Add the shaking class
 
@@ -117,6 +118,9 @@
           // Set timeout to add 'cracked' class after 1 second
           setTimeout(() => {
             minecraftChest.classList.remove("shaking"); // Remove the shaking class
+
+            minecraftChest.setAttribute("src", "#minecraft_chest_animate");
+
             
             // Trigger confetti effect
             fire(0.25, {
