--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           setTimeout(() => {
             minecraftChest.classList.remove("shaking"); // Remove the shaking class
 
-            minecraftChest.setAttribute("./static/3D-file/glb/minecraft_chest.glb", "#minecraft_chest_animate");
+            minecraftChest.setAttribute("src", "#minecraft_chest_animate");
 
             
             // Trigger confetti effect
