--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">  
         <a-gltf-model id="minecraft_chest_model" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" animation-mixer></a-gltf-model>
+        <a-gltf-model id="minecraft_chest_model_animate" src="#minecraft_chest_animate" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" animation-mixer></a-gltf-model>
       </a-entity>
 
       <div class="fortune-slip" id="fortuneSlip"></div>
@@ -72,6 +73,7 @@
         
         // Hide the fortune cookie initially
         const minecraftChest = document.getElementById("minecraft_chest_model");
+        const minecraftChestAnimate = document.getElementById("minecraft_chest_model_animate");
         // minecraft_chest.style.display = "none";
         minecraftChest.classList.add("shaking"); // Add the shaking class
 
@@ -117,9 +119,9 @@
 
           // Set timeout to add 'cracked' class after 1 second
           setTimeout(() => {
-            minecraftChest.classList.remove("shaking"); // Remove the shaking class
-
-            minecraftChest.setAttribute("src", "#minecraft_chest_animate");
+            minecraftChest.classList.remove("shaking");
+            minecraftChest.setAttribute("visible", "false");
+            minecraftChestAnimate.setAttribute("visible", "true");
 
             
             // Trigger confetti effect
