--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             minecraftChest.classList.remove("shaking");
             minecraftChest.setAttribute("visible", "false");
             minecraftChestAnimate.setAttribute("visible", "true");
+            minecraftChestAnimate.style.display = "block"; // Ensure it's visible
+
 
             
             // Trigger confetti effect
