--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </a-assets>
 
     <a-entity id="example-target" mindar-image-target="targetIndex: 0">
-      <a-gltf-model id="minecraft_chest_model" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" animation-mixer visible="true"></a-gltf-model>
-      <a-gltf-model id="minecraft_chest_model_animate" src="#minecraft_chest_animate" rotation="0 -90 0" position="0 0 0" scale="0.005 0.005 0.005" animation-mixer="clip: *; loop: once" visible="false"></a-gltf-model>
+      <a-gltf-model id="minecraft_chest_model" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" visible="true"></a-gltf-model>
+      <a-gltf-model id="minecraft_chest_model_animate" src="#minecraft_chest_animate" rotation="0 -90 0" position="0 0 0" scale="0.005 0.005 0.005" visible="false"></a-gltf-model>
     </a-entity>
 
     <div class="fortune-slip" id="fortuneSlip"></div>
@@ -100,6 +100,12 @@
         const randomFortune = fortunes[Math.floor(Math.random() * fortunes.length)];
         fortuneSlip.textContent = randomFortune;
         console.log(randomFortune);
+
+        const mixer = minecraftChestAnimate.components['animation-mixer'].mixer;
+        const clips = mixer._actions;
+        clips.forEach(action => {
+          action.setLoop(THREE.LoopRepeat, 2);  // Set the animation to loop twice
+        });
 
         setTimeout(() => {
           minecraftChest.classList.remove("shaking");
