--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             minecraftChest.setAttribute("visible", "false");
             minecraftChestAnimate.setAttribute("visible", "true");
             minecraftChestAnimate.style.display = "block"; // Ensure it's visible
+            minecraftChestAnimate.setAttribute('animation-mixer', 'timeScale: 1');
 
 
             
