--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <a-entity id="example-target" mindar-image-target="targetIndex: 0">
       <a-gltf-model id="minecraft_chest_model" src="#minecraft_chest" rotation="90 -90 0" position="-0.4 0 0" scale="0.005 0.005 0.005" animation-mixer visible="true"></a-gltf-model>
       <a-gltf-model id="minecraft_chest_model_animate" src="#minecraft_chest_animate" rotation="0 -90 0" position="0 0 0" scale="0.005 0.005 0.005" animation-mixer="loop: once; clip: *; timeScale: 0" visible="false"></a-gltf-model>
+      <a-entity id="fortuneSlip" text="value: ; align: center;" position="0 0.5 0" visible="false"></a-entity>
     </a-entity>
-
-    <div class="fortune-slip" id="fortuneSlip"></div>
 
     <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: ${customFields.libVersion}; objects: .clickable"></a-camera>
   </a-scene>
@@ -67,6 +66,7 @@
       // Hide the fortune cookie initially
       const minecraftChest = document.getElementById("minecraft_chest_model");
       const minecraftChestAnimate = document.getElementById("minecraft_chest_model_animate");
+      const fortuneSlip = document.getElementById("fortuneSlip");
       minecraftChestAnimate.style.display = "none";
       minecraftChest.classList.add("shaking"); // Add the shaking class
       minecraftChestAnimate.setAttribute("visible", "false");
@@ -115,9 +115,9 @@
         hasOpened = true;
 
         // Display the fortune slip and crack the fortune cookie
-        const fortuneSlip = document.getElementById("fortuneSlip");
         const randomFortune = fortunes[Math.floor(Math.random() * fortunes.length)];
-        fortuneSlip.textContent = randomFortune;
+        fortuneSlip.setAttribute("text", "value: " + randomFortune + "; align: center;");
+        fortuneSlip.setAttribute("visible", "true");
         console.log(randomFortune);
 
         // Set timeout to add 'cracked' class after 1 second
