--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
         // Display the fortune slip and crack the fortune cookie
         const randomFortune = fortunes[Math.floor(Math.random() * fortunes.length)];
         fortuneSlip.textContent = randomFortune;
-        fortuneSlip.style.transform = "translate(-50%, -50%) scale(1)";
-        fortuneSlip.style.opacity = "1";
+        fortuneSlip.classList.add("show");
         console.log(randomFortune);
   
         // Set timeout to add 'cracked' class after 1 second
@@ -167,6 +166,7 @@
       document.querySelector("a-scene").addEventListener("click", handleInteraction);
       document.querySelector("a-scene").addEventListener("touchstart", handleInteraction);
     });
-  </script>  
+  </script>
+  
 </body>
 </html>
