--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         fortuneSlip.textContent = randomFortune;
         fortuneSlip.style.transform = "translate(-50%, -50%) scale(1)";
         fortuneSlip.style.opacity = "1";
+        fortuneSlip.classList.add("show");
         console.log(randomFortune);
   
         // Set timeout to add 'cracked' class after 1 second
